# td-cli

./: README.md  pyproject.toml
td/: SKILL.md  cli.py
