[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "td-todo-cli"
version = "0.1.1"
description = "A local-first task state manager for humans and LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
td = "td.cli:cli"

[tool.setuptools]
packages = ["td"]

[tool.setuptools.package-data]
td = ["SKILL.md"]
